cargo-features = ["edition2021"]

[package]
name = "ovn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8.5"
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-token = "3.2.0"

[dependencies.mercurial_stable_swap_n_pool_instructions]
path = "/Users/evgenijzaharov/CLionProjects/stable-swap-n-pool-instructions"

[dev-dependencies]
solana-sdk = "1.8.5"
solana-program-test = "1.8.5"

[lib]
name = "ovn"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []